2009-12-09 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix clush -q/--quiet issue.

	* scripts/nodeset.py: Add separator option to nodeset
	--expand with -S <string> (trac ticket #39).

	* Worker/Pdsh.py: Added copy support for directory (automatic
	detection). Added non-reg tests.

2009-12-08 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Added source presence check on copy.

2009-12-07 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Ssh.py: Added copy support for directory (automatic
	detection).

	* Worker/Ssh.py: Fix Scp Popen4->subprocess.popen issue (simple
	quote escape not needed).

2009-11-10 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 0 released. Updated doc and man pages for 1.2.

2009-11-09 S. Thiell <stephane.thiell@cea.fr>

	* Engine/EPoll.py: Add stdout/stderr support (still experimental).

	* Worker/Pdsh.py: Fix stdout/stderr support.

    * Backport recent 1.1-branch improvements: tests code coverage, also
	resulting in some fixes (see 1.1 2009-10-28).

2009-11-09 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Added stdout/stderr support in clush script.

2009-11-04 S. Thiell <stephane.thiell@cea.fr>

	* Added optional separate stdout/stderr handling (with 1.1 Task API
	compat). Added some tests for that.

	* Create a MsgTree class in MsgTree.py and remove this code from
	Task.py.

	* First changes to use setUp() in test case objects.

2009-08-02 S. Thiell <stephane.thiell@cea.fr>

	* clush.py: (1) remove /step in displayed nodeset when using -b (to
	allow copy/paste to other tools like ipmipower that doesn't support
	N-M/STEP ranges), (2) when command timeout is specified (-u), show
	nodes (on stderr) that didn't have time to fully complete, (3) flush
	stdio buffers before exiting. [merged from branch 1.1]

2009-07-29 S. Thiell <stephane.thiell@cea.fr>

	* tests/NodeSetScriptTest.py: added unit test for scripts/nodeset.py

	* NodeSet.py: fixed a problem with intersection_update() when used